# werkit

./: .flake8  .gitignore  .prettierignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  build-lambda.sh  dev.py  eslint.config.ts  lambda.py  package-lock.json  package.json  pyproject.toml  requirements.txt  requirements_aws_lambda_build.txt  requirements_client.txt  requirements_dev.txt  requirements_dev_common.txt  requirements_dev_py3.txt  setup.cfg  setup.py  tsconfig.json
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: coverage-report.yml  main.yml  python.yml  repo.yml  types.yml  werkit-codegen-js.yml  werkit-lambda-js.yml
.github/workflows/common/: action.yml
.github/workflows/node-common/: action.yml
.github/workflows/python-common/: action.yml
parallel/: invoke.py  test_invoke.py
scripts/: publish_to_s3.py
tests/aws_lambda/: default_handler.py  integration.py  parallel.py  util.py
tests/aws_lambda/worker/: service.py
tests/lambda/: parallel.py
types/: CHANGELOG.md  LICENSE  README.md  index.ts  orchestrator-types.ts  package-lock.json  package.json  tsconfig.json  types.ts  werkit-0.32.1.tgz
types/src/: cli.ts  dependency-graph.schema.ts  destination-message.ts  generate-compute-node-interfaces.test.ts  generate-compute-node-interfaces.ts  index.ts  lambda-deploy.ts  manager.schema.ts  orchestrator.schema.ts  s3.test.ts  s3.ts  uuid-hex.ts
werkit/: __init__.py  format_time.py  formatting.py  manager.py  publish_to_s3.py  s3.py  schema.py  test_manager.py  test_s3.py
werkit-codegen-js/: README.md  package.json  tsconfig.json
werkit-codegen-js/src/: cli.ts  generate-compute-node-interfaces.test.ts  generate-compute-node-interfaces.ts  index.ts
werkit-lambda-js/: package-lock.json  package.json  tsconfig.json
werkit-lambda-js/src/: index.ts  lambda-deploy.ts
werkit/aws_lambda/: build.py  default_handler.py  deploy.py  orchestrator_deploy.py  parallel.py  test_build.py  test_default_handler.py  test_integration.py  test_parallel.py  test_preintegration.py  test_util.py  ziplib.py
werkit/aws_lambda/test_worker/: service.py
werkit/common/: build.py  cli_common.py  pathlib.py
werkit/compute/: __init__.py  _destination.py  _formatting.py  _manager.py  _schema.py  _serialization.py  _synthetic_error.py  _types.py  manager_testing.schema.ts  test_formatting.py  test_manager.py
werkit/compute/destination/: lambda_destination.py  rds_graphile_worker.py
werkit/compute/graph/: README.md  __init__.py  _binding.py  _built_in_type.py  _built_in_value_type.py  _custom_type.py  _custom_value_type.py  _decorators.py  _dependencies.py  _dependency_graph.py  _our_value_types.py  _state_manager.py  _types.py  _value_types.py  dependency-graph.schema.json  our_schema.ts  schema.ts  sketch.py  test_binding.py  test_dependency_graph.py  test_graph.py  test_state_manager.py  testing_example.py  testing_examples.py
werkit/compute/test_schema/: package-lock.json  package.json  schema.ts
werkit/compute/tree/: sketch.py
werkit/lambda/: default_handler.py  parallel.py  s3_handler.py
werkit/orchestrator/: deploy.py
werkit/orchestrator/orchestrator_lambda/: handler.py  parallel.py  schema.py  schema.ts
werkit/orchestrator/testing/: foo.py  test_integration.py
werkit/orchestrator/testing/worker_service/: handler.py  schema.ts  test_handler.py  test_service.py
werkit/parallel/: __init__.py  cloud_manager.py  invoke.py  test_invoke.py  testing.py
werkit/scripts/: publish_to_s3.py
