[tool.poetry]
name = "werkit"
version = "0.32.0"
description = "Toolkit for encapsulating Python-based computation into deployable and distributable tasks"
authors = ["Paul Melnikow <github@paulmelnikow.com>", "Metabolize"]
license = "MIT"
include = ["CHANGELOG.md"]
exclude = ["**/test_*.py"]
homepage = "https://github.com/metabolize/werkit"
repository = "https://github.com/metabolize/werkit"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: System :: Distributed Computing",
    "Topic :: Scientific/Engineering",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = ">=3.9,<4"
# https://docs.aws.amazon.com/lambda/latest/dg/lambda-python.html
boto3 = {version = "1.20.32", optional = true}
click = {version = "^8.0.3", optional = true}
executor = {version = ">=21.0", optional = true}
harrison = {version = "^2.0", optional = true}
missouri = "0.3.0"
# Pin to 0.18.0 to work around a Poetry install problem with 0.18.1 on OS X 10.15.7.
# https://github.com/tobgu/pyrsistent/issues/241
pyrsistent = {version = "0.18.0", optional = true}
rds-graphile-worker-client = {version = "^0.1.1", optional = true}
semver = "3.0.1"
jsonschema = "^4.1.2"
artifax = {version = "0.5", optional = true}
typing-extensions = {version = ">=4", optional = true, python = "<3.10"}
# artifax = {git = "https://github.com/curvewise-forks/artifax.git", rev = "3cd288a1698a798c0e488eba31e8e9ce3f075e1c", optional = true}
# Temporarily declare artifax dependencies until we publish an artifax fork.
# pathos = {version = "*", optional = true}
# exos = {version = "*", optional = true}

[tool.poetry.extras]
aws_lambda_build = ["executor"]
client = ["boto3"]
# compute_graph = ["artifax"]
compute_graph = ["artifax", "pathos", "exos", "typing-extensions"]
lambda_common = ["harrison"]
cli = ["click"]
rds_graphile_worker = ["rds-graphile-worker-client"]

[tool.poetry.dev-dependencies]
black = "23.3.0"
boto3-stubs = {version = "1.26.90", extras = ["s3", "lambda"]}
click = "8.0.3"
coverage = "7.2.7"
executor = "23.2"
flake8 = "5.0.4"
flake8-import-order = "0.18.2"
freezegun = "1.2.2"
mypy = "1.4.1"
pytest = "7.4.0"
pytest-cov = "4.0.0"
python-dotenv = "0.21.1"
twine = "4.0.2"
types-boto3 = "1.0.2"
types-freezegun = "1.1.10"
types-jsonschema = "4.17.0.9"

[build-system]
# Lint requires setuptools.
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = ["slow"]
norecursedirs = ["build", "node_modules"]

[tool.coverage.report]
omit = [
    "**/test_*.py",
    "werkit/orchestrator/testing/worker_service/*.py",
]

[[tool.mypy.overrides]]
module = "werkit.*"
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true

[[tool.mypy.overrides]]
module = 'harrison.*'
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = 'artifax.*'
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = 'rds_graphile_worker_client.*'
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = 'executor.*'
ignore_missing_imports = true
