[tool.poetry]
name = "werkit"
version = "0.38.0"
description = "Toolkit for encapsulating Python-based computation into deployable and distributable tasks"
authors = ["Paul Melnikow <github@paulmelnikow.com>", "Metabolize"]
license = "MIT"
include = ["CHANGELOG.md"]
exclude = ["**/test_*.py"]
homepage = "https://github.com/metabolize/werkit"
repository = "https://github.com/metabolize/werkit"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: System :: Distributed Computing",
    "Topic :: Scientific/Engineering",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = ">=3.10,<4"
# https://docs.aws.amazon.com/lambda/latest/dg/lambda-python.html
boto3 = {version = "^1.34.145", optional = true}
click = {version = "^8.0.3", optional = true}
sh = {version = ">=2.0,<3", optional = true}
missouri = ">=1.0,<2.0"
semver = ">=3.0.4,<4"
jsonschema = "^4.26.0"
referencing = "^0.37.0"
artifax = {version = "0.5", optional = true}
typing-extensions = {version = ">=4", optional = true}

[tool.poetry.extras]
aws_lambda_build = ["sh"]
client = ["boto3"]
compute_graph = ["artifax", "typing-extensions"]
lambda_common = []
cli = ["click"]

[tool.poetry.dev-dependencies]
black = "26.3.1"
boto3 = "1.42.39"
boto3-stubs = {version = "1.42.39", extras = ["s3", "lambda"]}
click = "8.3.1"
coverage = "7.13.5"
sh = "^2.0"
flake8 = "7.3.0"
flake8-import-order = "0.19.2"
freezegun = "1.5.5"
mypy = "1.19.1"
pytest = "9.0.2"
pytest-cov = "7.0.0"
python-dotenv = "1.2.1"
twine = "6.2.0"
types-boto3 = "1.42.56"
types-freezegun = "1.1.10"
types-jsonschema = "4.26.0.20260202"

[build-system]
# Lint requires setuptools.
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = ["slow"]
norecursedirs = ["build", "node_modules"]

[tool.coverage.report]
omit = [
    "**/test_*.py",
]

[[tool.mypy.overrides]]
module = "werkit.*"
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true

[[tool.mypy.overrides]]
module = 'artifax.*'
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sh"
ignore_missing_imports = true
